--- a/src/dark-mode.css
+++ b/src/dark-mode.css
@@ -1,51 +1,45 @@
-/* Today's color palette provided by:  https://www.color-hex.com/color-palette/30023*/
-
-
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
 body {
-  margin: 0px;
-  background-color: #dbc1ac;
+  /* background-color: rgb(39, 38, 38); */
+  background-color: rgb(39, 38, 38);
+  color: white;
 }
-
 .column-container {
+  position: absolute;
+  top: 0;
   display: flex;
-  width: 100%;
-  height: 100vh;
-  min-width: 650px;
+  flex-direction: column;
+  width: 100vw;
+  min-width: 300px;
 }
 .column {
-  margin: 10px;
-  margin-top: 0px;
+  width: 90vw;
+  margin: 20px;
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #38220f
+  color: white;
 }
-
 .container {
   width: 100%;
   height: calc(100vh - 40px);
 }
 .container.left {
-  margin-top: 25px;
-  margin-left: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-
 .column-header {
   font-size: 25px;
   position: relative;
-  background-color: #dbc1ac;
-  
-  top: 8px;
+  /* background-color: rgb(39, 38, 38); */
+	color: white;
   margin-bottom: 8px;
 }
 #big_coffee {
@@ -53,28 +47,28 @@ body {
   font-size: 128px;
   cursor: pointer;
 }
-
 .counter-container {
   font-size: 30px;
   margin: 10px;
+  color: white;
 }
-
 .cps-container {
   font-size: 20px;
+  color: white;
 }
-
 #producer_container {
   padding: 10px;
   overflow: auto;
-  border: 2px #38220f solid;
+  border: 2px white solid;
   border-radius: 5px;
-  background-color: #967259;
+  background-color: rgb(39, 38, 38);
 }
-
 .producer {
+  color: white;
   margin-bottom: 5px;
   padding: 10px;
-  border: 2px solid #dbc1ac;
+  border: 2px solid white;
+  background-color: rgb(39, 38, 38);
   border-radius: 4px;
   display: flex;
   justify-content: space-between;
@@ -82,39 +76,44 @@ body {
 .active-producer {
   margin-bottom: 5px;
   padding: 10px;
-  border: 2px solid #dbc1ac;
+  border: 2px solid white;
   border-radius: 4px;
   display: flex;
   justify-content: space-between;
-  background-color: #38220f;
-  color: #ece0d1;
+  background-color: black;
+  color: white;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: bold;
 }
-
 .barrista {
   margin-top: 65px;
   padding: 10px;
-  border: 2px solid #dbc1ac;
+  border: 2px solid white;
   border-radius: 14px;
   display: flex;
-  background-color: #967259;
-  color: #38220f;
+  background-color: rgb(39, 38, 38);
+  color: white;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
 }
-
 .producer-column {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-
 .producer-title {
   font-size: 20px;
 }
-
 .producer button {
   font-size: 15px;
   width: 50px;
+}
+
+.initial {
+	background-color: rgb(216, 216, 216);
+	color: black;
+}
+
+.repeat {
+	background-color: rgb(216, 216, 216);
+	color: black;
 }
