--- a/src/light-mode.css
+++ b/src/light-mode.css
@@ -1,36 +1,35 @@
 * {
-  padding: 0;
-  margin: 0;
-}
-* {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 body {
-  margin: 0px;
-  background-color: #fffdd1;
+  /* background-color: rgb(233, 233, 233); */
+  background-color: rgb(233, 233, 233);
+  color: black;
 }
 .column-container {
+  position: absolute;
+  top: 0;
   display: flex;
-  width: 100%;
-  height: 100vh;
-  min-width: 650px;
+  flex-direction: column;
+  width: 100vw;
+  min-width: 300px;
 }
 .column {
-  margin: 10px;
-  margin-top: 0px;
+  width: 90vw;
+  margin: 20px;
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #6a4101;
+  color: black;
 }
 .container {
   width: 100%;
   height: calc(100vh - 40px);
 }
 .container.left {
-  margin-top: 25px;
-  margin-left: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,8 +38,8 @@ body {
 .column-header {
   font-size: 25px;
   position: relative;
-  background-color: #fffdd1;
-  top: 8px;
+  /* background-color: rgb(233, 233, 233); */
+	color: rgb(233, 233, 233);
   margin-bottom: 8px;
 }
 #big_coffee {
@@ -51,22 +50,25 @@ body {
 .counter-container {
   font-size: 30px;
   margin: 10px;
+  color: black;
 }
 .cps-container {
   font-size: 20px;
+  color: black;
 }
 #producer_container {
   padding: 10px;
   overflow: auto;
-  border: 2px #6a4101 solid;
+  border: 2px black solid;
   border-radius: 5px;
-  background-color: #F6F5F4;
+  background-color: rgb(233, 233, 233);
 }
 .producer {
-  color: #6a4101;
+  color: black;
   margin-bottom: 5px;
   padding: 10px;
-  border: 2px solid #6a4101;
+  border: 2px solid black;
+  background-color: rgb(233, 233, 233);
   border-radius: 4px;
   display: flex;
   justify-content: space-between;
@@ -74,23 +76,23 @@ body {
 .active-producer {
   margin-bottom: 5px;
   padding: 10px;
-  border: 2px solid #6a4101;
+  border: 2px solid black;
   border-radius: 4px;
   display: flex;
   justify-content: space-between;
-  background-color: #FFF87C;
-  color: #6a4101;
+  background-color: white;
+  color: black;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: bold;
 }
 .barrista {
   margin-top: 65px;
   padding: 10px;
-  border: 2px solid #FFF87C;
+  border: 2px solid black;
   border-radius: 14px;
   display: flex;
-  background-color: #F6F5F4;
-  color: #6a4101;
+  background-color: rgb(233, 233, 233);
+  color: black;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .producer-column {
@@ -104,4 +106,14 @@ body {
 .producer button {
   font-size: 15px;
   width: 50px;
+}
+
+.initial {
+	background-color: rgb(216, 216, 216);
+	color: black;
+}
+
+.repeat {
+	background-color: rgb(216, 216, 216);
+	color: black;
 }
